--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -556,134 +556,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>type</th>\n",
-       "      <th>Rural</th>\n",
-       "      <th>Suburban</th>\n",
-       "      <th>Urban</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01 00:08:16</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01 00:46:46</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>47.74</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01 02:07:24</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24.07</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01 03:46:50</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01 05:23:21</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-05-08 04:20:00</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>21.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-05-08 04:39:49</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>18.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-05-08 07:29:01</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>18.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-05-08 11:38:35</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>19.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-05-08 13:10:18</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>18.04</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2375 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "type                 Rural  Suburban  Urban\n",
-       "date                                       \n",
-       "2019-01-01 00:08:16    NaN       NaN  37.91\n",
-       "2019-01-01 00:46:46    NaN     47.74    NaN\n",
-       "2019-01-01 02:07:24    NaN     24.07    NaN\n",
-       "2019-01-01 03:46:50    NaN       NaN   7.57\n",
-       "2019-01-01 05:23:21    NaN       NaN  10.75\n",
-       "...                    ...       ...    ...\n",
-       "2019-05-08 04:20:00    NaN       NaN  21.99\n",
-       "2019-05-08 04:39:49    NaN       NaN  18.45\n",
-       "2019-05-08 07:29:01    NaN       NaN  18.55\n",
-       "2019-05-08 11:38:35    NaN       NaN  19.77\n",
-       "2019-05-08 13:10:18    NaN       NaN  18.04\n",
-       "\n",
-       "[2375 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 4. Create a pivot table with the 'date' as the index, the columns ='type', and values='fare' \n",
     "# to get the total fares for each type of city by the date. \n",
@@ -692,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +680,7 @@
        "2019-01-01 14:52:06    NaN     31.15    NaN"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -860,186 +733,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>type</th>\n",
-       "      <th>Rural</th>\n",
-       "      <th>Suburban</th>\n",
-       "      <th>Urban</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2019-01-06</th>\n",
-       "      <td>187.92</td>\n",
-       "      <td>721.60</td>\n",
-       "      <td>1661.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-13</th>\n",
-       "      <td>67.65</td>\n",
-       "      <td>1105.13</td>\n",
-       "      <td>2050.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-20</th>\n",
-       "      <td>306.00</td>\n",
-       "      <td>1218.20</td>\n",
-       "      <td>1939.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-27</th>\n",
-       "      <td>179.69</td>\n",
-       "      <td>1203.28</td>\n",
-       "      <td>2129.51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-02-03</th>\n",
-       "      <td>333.08</td>\n",
-       "      <td>1042.79</td>\n",
-       "      <td>2086.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-02-10</th>\n",
-       "      <td>115.80</td>\n",
-       "      <td>974.34</td>\n",
-       "      <td>2162.64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-02-17</th>\n",
-       "      <td>95.82</td>\n",
-       "      <td>1045.50</td>\n",
-       "      <td>2235.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-02-24</th>\n",
-       "      <td>419.06</td>\n",
-       "      <td>1412.74</td>\n",
-       "      <td>2466.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-03-03</th>\n",
-       "      <td>175.14</td>\n",
-       "      <td>858.46</td>\n",
-       "      <td>2218.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-03-10</th>\n",
-       "      <td>303.94</td>\n",
-       "      <td>925.27</td>\n",
-       "      <td>2470.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-03-17</th>\n",
-       "      <td>163.39</td>\n",
-       "      <td>906.20</td>\n",
-       "      <td>2044.42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-03-24</th>\n",
-       "      <td>189.76</td>\n",
-       "      <td>1122.20</td>\n",
-       "      <td>2368.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-03-31</th>\n",
-       "      <td>199.42</td>\n",
-       "      <td>1045.06</td>\n",
-       "      <td>1942.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-07</th>\n",
-       "      <td>501.24</td>\n",
-       "      <td>1010.73</td>\n",
-       "      <td>2356.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-14</th>\n",
-       "      <td>269.79</td>\n",
-       "      <td>784.82</td>\n",
-       "      <td>2390.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-21</th>\n",
-       "      <td>214.14</td>\n",
-       "      <td>1149.27</td>\n",
-       "      <td>2303.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-28</th>\n",
-       "      <td>191.85</td>\n",
-       "      <td>1357.75</td>\n",
-       "      <td>2238.29</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "type         Rural  Suburban    Urban\n",
-       "date                                 \n",
-       "2019-01-06  187.92    721.60  1661.68\n",
-       "2019-01-13   67.65   1105.13  2050.43\n",
-       "2019-01-20  306.00   1218.20  1939.02\n",
-       "2019-01-27  179.69   1203.28  2129.51\n",
-       "2019-02-03  333.08   1042.79  2086.94\n",
-       "2019-02-10  115.80    974.34  2162.64\n",
-       "2019-02-17   95.82   1045.50  2235.07\n",
-       "2019-02-24  419.06   1412.74  2466.29\n",
-       "2019-03-03  175.14    858.46  2218.20\n",
-       "2019-03-10  303.94    925.27  2470.93\n",
-       "2019-03-17  163.39    906.20  2044.42\n",
-       "2019-03-24  189.76   1122.20  2368.37\n",
-       "2019-03-31  199.42   1045.06  1942.77\n",
-       "2019-04-07  501.24   1010.73  2356.70\n",
-       "2019-04-14  269.79    784.82  2390.72\n",
-       "2019-04-21  214.14   1149.27  2303.80\n",
-       "2019-04-28  191.85   1357.75  2238.29"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 8. Create a new DataFrame using the \"resample()\" function by week 'W' and get the sum of the fares for each week.\n",
     "\n",
-    "pyber_spec_week = pyber_spec_dates.resample(\"W\").sum()\n",
-    "\n",
-    "pyber_spec_week"
+    "pyber_spec_week = pyber_spec_dates.resample(\"W\").sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1055,12 +760,11 @@
    ],
    "source": [
     "# 8. Using the object-oriented interface method, plot the resample DataFrame using the df.plot() function. \n",
-    "pyber_spec_week.plot()\n",
     "# Import the style from Matplotlib.\n",
     "from matplotlib import style\n",
     "# Use the graph style fivethirtyeight.\n",
     "style.use('fivethirtyeight')\n",
-    "\n",
+    "pyber_spec_week.plot()\n",
     "plt.ylabel(\"Fare($USD)\")\n",
     "\n",
     "plt.title(\"Total Fare by City Type\")\n",
